// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Cascader Select 1`] = `
<ForwardRef(forwardRefFactory)
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
>
  <LocaleReceiver
    dataSource={
      Array [
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "11",
            },
            Object {
              "label": "选项二",
              "value": "12",
            },
          ],
          "label": "选项一",
          "value": "1",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "21",
            },
            Object {
              "label": "选项二",
              "value": "22",
            },
          ],
          "label": "选项一",
          "value": "2",
        },
      ]
    }
    forwardedRef={null}
  >
    <Select
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "11",
              },
              Object {
                "label": "选项二",
                "value": "12",
              },
            ],
            "label": "选项一",
            "value": "1",
          },
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "21",
              },
              Object {
                "label": "选项二",
                "value": "22",
              },
            ],
            "label": "选项一",
            "value": "2",
          },
        ]
      }
      displayRender={[Function]}
      itemRender={[Function]}
      locale={
        Object {
          "placeholder": "please select",
        }
      }
      localeCode="en"
      onClick={[Function]}
      prefixCls="za-select"
      valueMember="value"
    >
      <div
        className="za-select za-select--placeholder"
        onClick={[Function]}
      >
        <div
          className="za-select__input"
        >
          please select
        </div>
        <ForwardRef(forwardRefFactory)
          cols={Infinity}
          dataSource={
            Array [
              Object {
                "children": Array [
                  Object {
                    "label": "选项一",
                    "value": "11",
                  },
                  Object {
                    "label": "选项二",
                    "value": "12",
                  },
                ],
                "label": "选项一",
                "value": "1",
              },
              Object {
                "children": Array [
                  Object {
                    "label": "选项一",
                    "value": "21",
                  },
                  Object {
                    "label": "选项二",
                    "value": "22",
                  },
                ],
                "label": "选项一",
                "value": "2",
              },
            ]
          }
          itemRender={[Function]}
          localeCode="en"
          onCancel={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onOk={[Function]}
          onTransition={[Function]}
          valueMember="value"
          visible={false}
        >
          <LocaleReceiver
            cols={Infinity}
            dataSource={
              Array [
                Object {
                  "children": Array [
                    Object {
                      "label": "选项一",
                      "value": "11",
                    },
                    Object {
                      "label": "选项二",
                      "value": "12",
                    },
                  ],
                  "label": "选项一",
                  "value": "1",
                },
                Object {
                  "children": Array [
                    Object {
                      "label": "选项一",
                      "value": "21",
                    },
                    Object {
                      "label": "选项二",
                      "value": "22",
                    },
                  ],
                  "label": "选项一",
                  "value": "2",
                },
              ]
            }
            forwardedRef={null}
            itemRender={[Function]}
            localeCode="en"
            onCancel={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onOk={[Function]}
            onTransition={[Function]}
            valueMember="value"
            visible={false}
          >
            <Picker
              cols={Infinity}
              dataSource={
                Array [
                  Object {
                    "children": Array [
                      Object {
                        "label": "选项一",
                        "value": "11",
                      },
                      Object {
                        "label": "选项二",
                        "value": "12",
                      },
                    ],
                    "label": "选项一",
                    "value": "1",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "label": "选项一",
                        "value": "21",
                      },
                      Object {
                        "label": "选项二",
                        "value": "22",
                      },
                    ],
                    "label": "选项一",
                    "value": "2",
                  },
                ]
              }
              itemRender={[Function]}
              locale={
                Object {
                  "cancelText": "Cancel",
                  "okText": "OK",
                  "title": "please select",
                }
              }
              localeCode="en"
              onCancel={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onOk={[Function]}
              onTransition={[Function]}
              prefixCls="za-picker"
              valueMember="value"
              visible={false}
            >
              <div
                className="za-picker"
              >
                <Popup
                  onMaskClick={[Function]}
                  visible={false}
                >
                  <Portal
                    animationDuration={200}
                    autoClose={false}
                    direction="bottom"
                    handlePortalUnmount={[Function]}
                    mask={true}
                    maskType="normal"
                    onMaskClick={[Function]}
                    prefixCls="za-popup"
                    stayTime={3000}
                    visible={false}
                  />
                </Popup>
              </div>
            </Picker>
          </LocaleReceiver>
        </ForwardRef(forwardRefFactory)>
      </div>
    </Select>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`Select Cascader Select init value 1`] = `
<ForwardRef(forwardRefFactory)
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
  displayAddon="-"
  value={
    Array [
      "1",
      "12",
    ]
  }
>
  <LocaleReceiver
    dataSource={
      Array [
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "11",
            },
            Object {
              "label": "选项二",
              "value": "12",
            },
          ],
          "label": "选项一",
          "value": "1",
        },
        Object {
          "children": Array [
            Object {
              "label": "选项一",
              "value": "21",
            },
            Object {
              "label": "选项二",
              "value": "22",
            },
          ],
          "label": "选项一",
          "value": "2",
        },
      ]
    }
    displayAddon="-"
    forwardedRef={null}
    value={
      Array [
        "1",
        "12",
      ]
    }
  >
    <Select
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "11",
              },
              Object {
                "label": "选项二",
                "value": "12",
              },
            ],
            "label": "选项一",
            "value": "1",
          },
          Object {
            "children": Array [
              Object {
                "label": "选项一",
                "value": "21",
              },
              Object {
                "label": "选项二",
                "value": "22",
              },
            ],
            "label": "选项一",
            "value": "2",
          },
        ]
      }
      displayAddon="-"
      displayRender={[Function]}
      itemRender={[Function]}
      locale={
        Object {
          "placeholder": "please select",
        }
      }
      localeCode="en"
      onClick={[Function]}
      prefixCls="za-select"
      value={
        Array [
          "1",
          "12",
        ]
      }
      valueMember="value"
    >
      <div
        className="za-select"
        onClick={[Function]}
      >
        <div
          className="za-select__input"
        >
          选项一
          选项二
        </div>
        <ForwardRef(forwardRefFactory)
          cols={Infinity}
          dataSource={
            Array [
              Object {
                "children": Array [
                  Object {
                    "label": "选项一",
                    "value": "11",
                  },
                  Object {
                    "label": "选项二",
                    "value": "12",
                  },
                ],
                "label": "选项一",
                "value": "1",
              },
              Object {
                "children": Array [
                  Object {
                    "label": "选项一",
                    "value": "21",
                  },
                  Object {
                    "label": "选项二",
                    "value": "22",
                  },
                ],
                "label": "选项一",
                "value": "2",
              },
            ]
          }
          displayAddon="-"
          itemRender={[Function]}
          localeCode="en"
          onCancel={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onOk={[Function]}
          onTransition={[Function]}
          value={
            Array [
              "1",
              "12",
            ]
          }
          valueMember="value"
          visible={false}
        >
          <LocaleReceiver
            cols={Infinity}
            dataSource={
              Array [
                Object {
                  "children": Array [
                    Object {
                      "label": "选项一",
                      "value": "11",
                    },
                    Object {
                      "label": "选项二",
                      "value": "12",
                    },
                  ],
                  "label": "选项一",
                  "value": "1",
                },
                Object {
                  "children": Array [
                    Object {
                      "label": "选项一",
                      "value": "21",
                    },
                    Object {
                      "label": "选项二",
                      "value": "22",
                    },
                  ],
                  "label": "选项一",
                  "value": "2",
                },
              ]
            }
            displayAddon="-"
            forwardedRef={null}
            itemRender={[Function]}
            localeCode="en"
            onCancel={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onOk={[Function]}
            onTransition={[Function]}
            value={
              Array [
                "1",
                "12",
              ]
            }
            valueMember="value"
            visible={false}
          >
            <Picker
              cols={Infinity}
              dataSource={
                Array [
                  Object {
                    "children": Array [
                      Object {
                        "label": "选项一",
                        "value": "11",
                      },
                      Object {
                        "label": "选项二",
                        "value": "12",
                      },
                    ],
                    "label": "选项一",
                    "value": "1",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "label": "选项一",
                        "value": "21",
                      },
                      Object {
                        "label": "选项二",
                        "value": "22",
                      },
                    ],
                    "label": "选项一",
                    "value": "2",
                  },
                ]
              }
              displayAddon="-"
              itemRender={[Function]}
              locale={
                Object {
                  "cancelText": "Cancel",
                  "okText": "OK",
                  "title": "please select",
                }
              }
              localeCode="en"
              onCancel={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onOk={[Function]}
              onTransition={[Function]}
              prefixCls="za-picker"
              value={
                Array [
                  "1",
                  "12",
                ]
              }
              valueMember="value"
              visible={false}
            >
              <div
                className="za-picker"
              >
                <Popup
                  onMaskClick={[Function]}
                  visible={false}
                >
                  <Portal
                    animationDuration={200}
                    autoClose={false}
                    direction="bottom"
                    handlePortalUnmount={[Function]}
                    mask={true}
                    maskType="normal"
                    onMaskClick={[Function]}
                    prefixCls="za-popup"
                    stayTime={3000}
                    visible={false}
                  />
                </Popup>
              </div>
            </Picker>
          </LocaleReceiver>
        </ForwardRef(forwardRefFactory)>
      </div>
    </Select>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`Select Select 1`] = `
<ForwardRef(forwardRefFactory)
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
>
  <LocaleReceiver
    dataSource={
      Array [
        Object {
          "label": "选项一",
          "value": "1",
        },
        Object {
          "label": "选项二",
          "value": "2",
        },
      ]
    }
    forwardedRef={null}
  >
    <Select
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "label": "选项一",
            "value": "1",
          },
          Object {
            "label": "选项二",
            "value": "2",
          },
        ]
      }
      displayRender={[Function]}
      itemRender={[Function]}
      locale={
        Object {
          "placeholder": "please select",
        }
      }
      localeCode="en"
      onClick={[Function]}
      prefixCls="za-select"
      valueMember="value"
    >
      <div
        className="za-select za-select--placeholder"
        onClick={[Function]}
      >
        <div
          className="za-select__input"
        >
          please select
        </div>
        <ForwardRef(forwardRefFactory)
          cols={Infinity}
          dataSource={
            Array [
              Object {
                "label": "选项一",
                "value": "1",
              },
              Object {
                "label": "选项二",
                "value": "2",
              },
            ]
          }
          itemRender={[Function]}
          localeCode="en"
          onCancel={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onOk={[Function]}
          onTransition={[Function]}
          valueMember="value"
          visible={false}
        >
          <LocaleReceiver
            cols={Infinity}
            dataSource={
              Array [
                Object {
                  "label": "选项一",
                  "value": "1",
                },
                Object {
                  "label": "选项二",
                  "value": "2",
                },
              ]
            }
            forwardedRef={null}
            itemRender={[Function]}
            localeCode="en"
            onCancel={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onOk={[Function]}
            onTransition={[Function]}
            valueMember="value"
            visible={false}
          >
            <Picker
              cols={Infinity}
              dataSource={
                Array [
                  Object {
                    "label": "选项一",
                    "value": "1",
                  },
                  Object {
                    "label": "选项二",
                    "value": "2",
                  },
                ]
              }
              itemRender={[Function]}
              locale={
                Object {
                  "cancelText": "Cancel",
                  "okText": "OK",
                  "title": "please select",
                }
              }
              localeCode="en"
              onCancel={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onOk={[Function]}
              onTransition={[Function]}
              prefixCls="za-picker"
              valueMember="value"
              visible={false}
            >
              <div
                className="za-picker"
              >
                <Popup
                  onMaskClick={[Function]}
                  visible={false}
                >
                  <Portal
                    animationDuration={200}
                    autoClose={false}
                    direction="bottom"
                    handlePortalUnmount={[Function]}
                    mask={true}
                    maskType="normal"
                    onMaskClick={[Function]}
                    prefixCls="za-popup"
                    stayTime={3000}
                    visible={false}
                  />
                </Popup>
              </div>
            </Picker>
          </LocaleReceiver>
        </ForwardRef(forwardRefFactory)>
      </div>
    </Select>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;

exports[`Select render defaultValue correctly  1`] = `
<ForwardRef(forwardRefFactory)
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  defaultValue="2"
>
  <LocaleReceiver
    dataSource={
      Array [
        Object {
          "label": "选项一",
          "value": "1",
        },
        Object {
          "label": "选项二",
          "value": "2",
        },
      ]
    }
    defaultValue="2"
    forwardedRef={null}
  >
    <Select
      cols={Infinity}
      dataSource={
        Array [
          Object {
            "label": "选项一",
            "value": "1",
          },
          Object {
            "label": "选项二",
            "value": "2",
          },
        ]
      }
      defaultValue="2"
      displayRender={[Function]}
      itemRender={[Function]}
      locale={
        Object {
          "placeholder": "please select",
        }
      }
      localeCode="en"
      onClick={[Function]}
      prefixCls="za-select"
      valueMember="value"
    >
      <div
        className="za-select za-select--placeholder"
        onClick={[Function]}
      >
        <div
          className="za-select__input"
        >
          please select
        </div>
        <ForwardRef(forwardRefFactory)
          cols={Infinity}
          dataSource={
            Array [
              Object {
                "label": "选项一",
                "value": "1",
              },
              Object {
                "label": "选项二",
                "value": "2",
              },
            ]
          }
          defaultValue="2"
          itemRender={[Function]}
          localeCode="en"
          onCancel={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onOk={[Function]}
          onTransition={[Function]}
          valueMember="value"
          visible={false}
        >
          <LocaleReceiver
            cols={Infinity}
            dataSource={
              Array [
                Object {
                  "label": "选项一",
                  "value": "1",
                },
                Object {
                  "label": "选项二",
                  "value": "2",
                },
              ]
            }
            defaultValue="2"
            forwardedRef={null}
            itemRender={[Function]}
            localeCode="en"
            onCancel={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onOk={[Function]}
            onTransition={[Function]}
            valueMember="value"
            visible={false}
          >
            <Picker
              cols={Infinity}
              dataSource={
                Array [
                  Object {
                    "label": "选项一",
                    "value": "1",
                  },
                  Object {
                    "label": "选项二",
                    "value": "2",
                  },
                ]
              }
              defaultValue="2"
              itemRender={[Function]}
              locale={
                Object {
                  "cancelText": "Cancel",
                  "okText": "OK",
                  "title": "please select",
                }
              }
              localeCode="en"
              onCancel={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onOk={[Function]}
              onTransition={[Function]}
              prefixCls="za-picker"
              valueMember="value"
              visible={false}
            >
              <div
                className="za-picker"
              >
                <Popup
                  onMaskClick={[Function]}
                  visible={false}
                >
                  <Portal
                    animationDuration={200}
                    autoClose={false}
                    direction="bottom"
                    handlePortalUnmount={[Function]}
                    mask={true}
                    maskType="normal"
                    onMaskClick={[Function]}
                    prefixCls="za-popup"
                    stayTime={3000}
                    visible={false}
                  />
                </Popup>
              </div>
            </Picker>
          </LocaleReceiver>
        </ForwardRef(forwardRefFactory)>
      </div>
    </Select>
  </LocaleReceiver>
</ForwardRef(forwardRefFactory)>
`;
